--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
     <groupId>edu.dosw</groupId>
     <artifactId>taller1dosw</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>taller1dosw</name>
-    <description>Project for Taller 1 DOSW</description>
+    <name>SIRHA</name>
+    <description>Project GENESIS for SIRHA</description>
 
     <properties>
         <java.version>17</java.version>
@@ -25,8 +25,8 @@
         <junit.version>5.10.2</junit.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <sonar.projectKey>taller1dosw</sonar.projectKey>
-        <sonar.projectName>taller1dosw</sonar.projectName>
+        <sonar.projectKey>SIRHA</sonar.projectKey>
+        <sonar.projectName>tSIRHA</sonar.projectName>
         <sonar.host.url>http://localhost:9000</sonar.host.url>
         <sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
         <sonar.coverage.exclusions>src/**/configurators/**</sonar.coverage.exclusions>
