--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 # MongoDB Configuration
+
+spring.data.mongodb.uri=mongodb+srv://prueba:prueba1234@sirhadb.e43oxls.mongodb.net/?retryWrites=true&w=majority&appName=SIRHADB
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=sirha_db
@@ -19,3 +21,4 @@ springdoc.swagger-ui.tryItOutEnabled=true
 # Application Properties
 app.name=SIRHA Backend
 app.version=1.0.0
+
