feature: fix Pom.xml error jacoco

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
         <sonar.coverage.exclusions>src/**/configurators/**</sonar.coverage.exclusions>
         <jacoco.version>0.8.13</jacoco.version>
+        <argLine></argLine>
     </properties>
 
     <dependencies>
@@ -173,7 +174,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
                 <configuration>
-                    <argLine>-Dnet.bytebuddy.experimental=true</argLine>
+                    <argLine>@{argLine} -Dnet.bytebuddy.experimental=true</argLine>
                 </configuration>
             </plugin>
         </plugins>
