--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 # MongoDB Configuration
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=sirha_db
+spring.data.mongodb.uri=mongodb+srv://prueba:prueba1234@sirhadb.e43oxls.mongodb.net/?retryWrites=true&w=majority&appName=SIRHADB
+spring.data.mongodb.database=SIRHAdb
 
 # Logging
 logging.level.org.springframework.data.mongodb=DEBUG
