feat: Implement add group to course functionality
Implements the add group to course feature. Refactors Course and Group models. Updates CourseController and CourseService to handle group addition. Includes test updates.

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <mockito.version>5.12.0</mockito.version>
         <bytebuddy.version>1.15.8</bytebuddy.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <lombok.version>1.18.30</lombok.version>
 
         <sonar.projectKey>SIRHA</sonar.projectKey>
         <sonar.projectName>SIRHA</sonar.projectName>
@@ -60,6 +61,14 @@
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.3.0</version>
+        </dependency>
+
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.38</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- Tests -->
@@ -114,11 +123,6 @@
             <artifactId>junit-jupiter-params</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <scope>provided</scope>
         </dependency>
     </dependencies>
 
