--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <groupId>edu.dosw</groupId>
-    <artifactId>taller1dosw</artifactId>
+    <artifactId>squad-genesis-backend-2025-2</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>SIRHA</name>
     <description>Project GENESIS for SIRHA</description>
