--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,17 +4,27 @@ spring.data.mongodb.database=SIRHAdb
 
 # Logging
 logging.level.org.springframework.data.mongodb=DEBUG
+logging.level.org.springdoc=DEBUG
 
 # Server Configuration
 server.port=8080
-
-# Swagger Configuration
-springdoc.api-docs.path=/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.swagger-ui.operationsSorter=method
-springdoc.swagger-ui.tagsSorter=alpha
-springdoc.swagger-ui.tryItOutEnabled=true
+server.servlet.context-path=/api
 
 # Application Properties
 app.name=SIRHA Backend
 app.version=1.0.0
+# Habilitar y cambiar la ruta de los OpenAPI docs
+springdoc.api-docs.enabled=true
+springdoc.api-docs.path=/api-docs
+
+# Habilitar y cambiar la ruta de Swagger UI
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+
+# Mostrar información de Actuator en la doc (si usas actuator)
+springdoc.show-actuator=true
+
+# Configuración por defecto de tipos de contenido
+springdoc.default-consumes-media-type=application/json
+springdoc.default-produces-media-type=application/json
+
