--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <mockito.version>5.12.0</mockito.version>
         <bytebuddy.version>1.15.8</bytebuddy.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <lombok.version>1.18.30</lombok.version>
 
         <sonar.projectKey>SIRHA</sonar.projectKey>
