--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,8 @@
 repos:
   - repo: local
     hooks:
-      - id: maven-spotless-check
-        name: Maven Spotless Check
-        entry: mvn spotless:check
+      - id: maven-spotless-apply
+        name: Maven Spotless Apply
+        entry: mvn spotless:apply
         language: system
         pass_filenames: false
