fix: include tests

--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,9 @@
                 <version>3.2.5</version>
                 <configuration>
                     <argLine>@{argLine} -Dnet.bytebuddy.experimental=true</argLine>
+                    <includes>
+                        <include>**/*Test.java</include>
+                    </includes>
                 </configuration>
             </plugin>
 
