--- a/pom.xml
+++ b/pom.xml
@@ -126,10 +126,6 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
     </dependencies>
 
     <build>
@@ -159,12 +155,12 @@
                         </goals>
                         <configuration>
                             <excludes>
+                                <exclude>**/config/**</exclude>
                                 <exclude>**/model/**</exclude>
                                 <exclude>**/dto/**</exclude>
-                                <exclude>**/enums/**</exclude>
+                                <exclude>**/strategy/**</exclude>
+                                <exclude>**/configurators/**</exclude>
                                 <exclude>**/exception/**</exclude>
-                                <exclude>**/config/**</exclude>
-                                <exclude>**/Application.class</exclude>
                                 <exclude>**/default/**</exclude>
                             </excludes>
                         </configuration>
@@ -176,15 +172,6 @@
                             <goal>check</goal>
                         </goals>
                         <configuration>
-                            <excludes>
-                                <exclude>**/model/**</exclude>
-                                <exclude>**/dto/**</exclude>
-                                <exclude>**/enums/**</exclude>
-                                <exclude>**/exception/**</exclude>
-                                <exclude>**/config/**</exclude>
-                                <exclude>**/Application.class</exclude>
-                                <exclude>**/default/**</exclude>
-                            </excludes>
                             <rules>
                                 <rule>
                                     <element>PACKAGE</element>
@@ -197,6 +184,15 @@
                                     </limits>
                                 </rule>
                             </rules>
+                            <excludes>
+                                <exclude>**/config/**</exclude>
+                                <exclude>**/dto/**</exclude>
+                                <exclude>**/model/**</exclude>
+                                <exclude>**/strategy/**</exclude>
+                                <exclude>**/configurators/**</exclude>
+                                <exclude>**/exception/**</exclude>
+                                <exclude>**/default/**</exclude>
+                            </excludes>
                         </configuration>
                     </execution>
                 </executions>
