--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,17 @@
             </resource>
         </resources>
         <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <!-- Jacoco for coverage -->
             <plugin>
                 <groupId>org.jacoco</groupId>
