--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,12 +45,12 @@ jobs:
             target/surefire-reports/*
             target/site/jacoco/*
 
-#      - name: Deploy to Azure Web App
+#      - fullName: Deploy to Azure Web App
 #        id: deploy-to-webapp
 #        uses: azure/webapps-deploy@v3
 #        with:
-#          app-name: 'sirha-genesis'
-#          slot-name: 'Production'
+#          app-fullName: 'sirha-genesis'
+#          slot-fullName: 'Production'
 #          package: '*.jar'
 #          publish-profile: ${{ secrets.AzureAppService_PublishProfile_1234 }}
 
