--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
         with:
           app-name: 'sirha-genesis'
           slot-name: 'Production'
-          package: '*.jar'
+          package: 'target/*.jar'
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
 
   code-analysis:
