--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
         run: mvn spotless:check
 
       - name: Build & Unit Tests
-        run: mvn test
+        run: mvn clean package
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
