--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,9 +30,6 @@ jobs:
           distribution: 'temurin'
           cache: 'maven'
 
-      - name: Check Code Format
-        run: mvn spotless:check
-
       - name: Build & Unit Tests
         run: mvn clean package
 
@@ -45,15 +42,6 @@ jobs:
             target/surefire-reports/*
             target/site/jacoco/*
 
-      - name: Deploy to Azure Web App
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: 'sirha-genesis'
-          slot-name: 'Production'
-          package: 'target/*.jar'
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-
   code-analysis:
     runs-on: ubuntu-latest
     needs: build-and-test
@@ -63,42 +51,51 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
+          
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: build-artifacts
+          path: .
+          
+      - name: Generate JaCoCo report
+        run: mvn jacoco:report -Djacoco.destFile=target/jacoco.exec
+        
       - name: SonarQube Analysis
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          mvn clean verify sonar:sonar \
+          mvn sonar:sonar \
             -Dsonar.projectKey=Genesis-SIRHA_squad-genesis-backend-2025-2 \
             -Dsonar.host.url=${SONAR_HOST_URL} \
-            -Dsonar.login=${SONAR_TOKEN}
+            -Dsonar.login=${SONAR_TOKEN} \
+            -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml \
+            -Dsonar.jacoco.reportPaths=target/jacoco.exec \
+            -Dsonar.sourceEncoding=UTF-8
+          
+      - name: Check Code Format
+        run: mvn spotless:check
 
-  deploy-staging:
+  deploy:
     runs-on: ubuntu-latest
     needs: [build-and-test, code-analysis]
-    if: github.ref == 'refs/heads/staging' || github.ref == 'refs/heads/develop'
-    environment: staging
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: build-artifacts
-          path: build
-      - name: Deploy to Staging
-        run: |
-          echo "🚀 Desplegando en Staging..."
-          ls build/
-
-  deploy-production:
-    runs-on: ubuntu-latest
-    needs: [deploy-staging]
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v')
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
     environment: production
     steps:
-      - uses: actions/download-artifact@v4
+      - uses: actions/checkout@v4
+      
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
         with:
           name: build-artifacts
-          path: build
-      - name: Deploy to Production
-        run: |
-          echo "🚀 Desplegando en Producción..."
-          ls build/
+          path: target
+
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: 'sirha-genesis'
+          slot-name: 'Production'
+          package: 'target/*.jar'
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
