--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,9 +42,13 @@ jobs:
             target/surefire-reports/*
             target/site/jacoco/*
 
+      - name: Check Code Format
+        run: mvn spotless:check
+
   code-analysis:
     runs-on: ubuntu-latest
     needs: build-and-test
+    if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -73,10 +77,9 @@ jobs:
             -Dsonar.login=${SONAR_TOKEN} \
             -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml \
             -Dsonar.jacoco.reportPaths=target/jacoco.exec \
-            -Dsonar.sourceEncoding=UTF-8
+            -Dsonar.sourceEncoding=UTF-8 \
+            -Dsonar.analysis.ci.autoconfig.disabled=true
           
-      - name: Check Code Format
-        run: mvn spotless:check
 
   deploy:
     runs-on: ubuntu-latest
