--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,11 +81,11 @@ jobs:
             -Dsonar.analysis.ci.autoconfig.disabled=true
           
 
-  deploy:
+  deploy-sandbox:
     runs-on: ubuntu-latest
     needs: [build-and-test, code-analysis]
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
-    environment: production
+    if: github.ref == 'refs/heads/develop'
+    environment: sandbox
     steps:
       - uses: actions/checkout@v4
       
@@ -95,10 +95,40 @@ jobs:
           name: build-artifacts
           path: target
 
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: 'sirha-genesis'
+          slot-name: 'Sandbox'
+          package: 'target/*.jar'
+
+  deploy-prod:
+    runs-on: ubuntu-latest
+    needs: [ build-and-test, code-analysis ]
+    if: github.ref == 'refs/heads/main'
+    environment: production
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: build-artifacts
+          path: target
+          
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'sirha-genesis'
           slot-name: 'Production'
           package: 'target/*.jar'
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
