--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,16 +55,16 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-          
+
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
           name: build-artifacts
           path: .
-          
+
       - name: Generate JaCoCo report
         run: mvn jacoco:report -Djacoco.destFile=target/jacoco.exec
-        
+
       - name: SonarQube Analysis
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -79,26 +79,21 @@ jobs:
             -Dsonar.jacoco.reportPaths=target/jacoco.exec \
             -Dsonar.sourceEncoding=UTF-8 \
             -Dsonar.analysis.ci.autoconfig.disabled=true
-          
+  
 
   deploy-sandbox:
     runs-on: ubuntu-latest
     needs: [build-and-test, code-analysis]
-    if: github.ref == 'refs/heads/develop'
+    if: ithub.ref == 'refs/heads/develop'
     environment: sandbox
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
           name: build-artifacts
           path: target
-
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
@@ -106,6 +101,7 @@ jobs:
           app-name: 'sirha-genesis'
           slot-name: 'Sandbox'
           package: 'target/*.jar'
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_SANDBOX }}
 
   deploy-prod:
     runs-on: ubuntu-latest
@@ -120,11 +116,6 @@ jobs:
         with:
           name: build-artifacts
           path: target
-          
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
@@ -132,3 +123,4 @@ jobs:
           app-name: 'sirha-genesis'
           slot-name: 'Production'
           package: 'target/*.jar'
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_PRODUCTION }}
