feat: "Clase request handler y tests 80%"

--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,7 @@
                                 <exclude>**/configurators/**</exclude>
                                 <exclude>**/exception/**</exclude>
                                 <exclude>**/default/**</exclude>
+                                <exclude>**/utils/**</exclude>
                             </excludes>
                         </configuration>
                     </execution>
