feat : uso de log

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,18 @@ springdoc.show-actuator=true
 springdoc.default-consumes-media-type=application/json
 springdoc.default-produces-media-type=application/json
 
+# Configuración de LOGS para ver las notificaciones
+logging.level.edu.dosw.observer=INFO
+# Crear archivo de log
+logging.file.name=logs/application.log
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{36} - %msg%n
+
+# Mostrar en consola con colores
+logging.pattern.console=%d{HH:mm:ss} %highlight(%-5level) %cyan(%logger{36}) - %msg%n
+
+# Configuración de LOGS para ver las notificaciones - NIVELES MÁS ALTOS
+logging.level.edu.dosw=INFO
+logging.level.edu.dosw.services=INFO
+logging.level.edu.dosw.services.GroupService=DEBUG
+
+logging.level.org.mongodb=ERROR
