--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,6 @@ on:
     branches: [ main, develop, feature/* ]
   pull_request:
     branches: [ main, develop, staging ]
-    types: [opened, synchronize, reopened]
 
 permissions:
   contents: read
@@ -21,8 +20,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
 
     - uses: actions/setup-java@v4
       with:
@@ -31,7 +28,7 @@ jobs:
         cache: 'maven'
 
     - name: Build & Unit Tests
-      run: mvn clean package
+      run: mvn clean package spring-boot:repackage
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
@@ -98,28 +95,5 @@ jobs:
       uses: azure/webapps-deploy@v3
       with:
         app-name: 'sirha-genesis'
-        slot-name: 'Sandbox'
-        package: 'target/*.jar'
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_SANDBOX }}
-
-  deploy-prod:
-    runs-on: ubuntu-latest
-    needs: [ build-and-test, code-analysis ]
-    if: github.ref == 'refs/heads/main'
-    environment: production
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Download build artifacts
-      uses: actions/download-artifact@v4
-      with:
-        name: build-artifacts
-        path: target
-
-    - name: Deploy to Azure Web App
-      uses: azure/webapps-deploy@v3
-      with:
-        app-name: 'sirha-genesis'
-        slot-name: 'Production'
-        package: 'target/*.jar'
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_PRODUCTION }}
+        package: 'target/app.jar'
+        publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_2E5AC6488CCF4DD68C66E83FBFF24A17 }}
