--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main, develop, feature/* ]
+    branches: [ main, develop, feature/*, fix/* ]
   pull_request:
-    branches: [ main, develop, staging ]
+    branches: [ main, develop, feature/*, staging, fix/* ]
 
 permissions:
   contents: read
