--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,7 +80,7 @@ jobs:
   deploy-sandbox:
     runs-on: ubuntu-latest
     needs: [build-and-test, code-analysis]
-    if: ithub.ref == 'refs/heads/develop'
+    if: github.ref == 'refs/heads/develop'
     environment: sandbox
     steps:
     - uses: actions/checkout@v4
