--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,7 @@ jobs:
   code-analysis:
     runs-on: ubuntu-latest
     needs: build-and-test
+    if: github.ref == 'refs/heads/main'
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-java@v4
@@ -78,7 +79,7 @@ jobs:
   
   deploy-sandbox:
     runs-on: ubuntu-latest
-    needs: [build-and-test, code-analysis]
+    needs: build-and-test
     if: github.ref == 'refs/heads/develop'
     environment: sandbox
     steps:
