--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,6 +70,7 @@ jobs:
       run: |
         mvn sonar:sonar \
           -Dsonar.projectKey=Genesis-SIRHA_squad-genesis-backend-2025-2 \
+          -Dsonar.organization=Genesis-SIRHA \
           -Dsonar.host.url=${SONAR_HOST_URL} \
           -Dsonar.login=${SONAR_TOKEN} \
           -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml \
