--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ logging.level.org.springframework.data.mongodb=DEBUG
 logging.level.org.springdoc=DEBUG
 
 # Server Configuration
-server.port=8080
+server.port=${PORT:8080}
 server.servlet.context-path=/api
 
 # Application Properties
