--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,6 +62,7 @@ jobs:
       run: mvn jacoco:report -Djacoco.destFile=target/jacoco.exec
 
     - name: SonarQube Analysis
+      if: github.ref == 'refs/heads/main'
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
