--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,7 @@ jobs:
   code-analysis:
     runs-on: ubuntu-latest
     needs: build-and-test
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-java@v4
@@ -70,7 +71,7 @@ jobs:
       run: |
         mvn sonar:sonar \
           -Dsonar.projectKey=genesis-sirha \
-          -Dsonar.organization=Genesis-SIRHA \
+          -Dsonar.organization=genesis-SIRHA \
           -Dsonar.host.url=${SONAR_HOST_URL} \
           -Dsonar.login=${SONAR_TOKEN} \
           -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml \
