--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,7 +45,7 @@ jobs:
   code-analysis:
     runs-on: ubuntu-latest
     needs: build-and-test
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && github.event.pull_request == null
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-java@v4
@@ -63,7 +63,6 @@ jobs:
       run: mvn jacoco:report -Djacoco.destFile=target/jacoco.exec
 
     - name: SonarQube Analysis
-      if: github.ref == 'refs/heads/main'
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
@@ -71,7 +70,7 @@ jobs:
       run: |
         mvn sonar:sonar \
           -Dsonar.projectKey=genesis-sirha \
-          -Dsonar.organization=genesis-SIRHA \
+          -Dsonar.organization=Genesis-SIRHA \
           -Dsonar.host.url=${SONAR_HOST_URL} \
           -Dsonar.login=${SONAR_TOKEN} \
           -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml \
