--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,13 +13,12 @@ server.servlet.context-path=/api
 # Application Properties
 app.name=SIRHA Backend
 app.version=1.0.0
-# Habilitar y cambiar la ruta de los OpenAPI docs
-springdoc.api-docs.enabled=true
-springdoc.api-docs.path=/api-docs
 
-# Habilitar y cambiar la ruta de Swagger UI
-springdoc.swagger-ui.enabled=true
-springdoc.swagger-ui.path=/swagger-ui.html
+# ? CORRECTED SpringDoc Configuration for context-path=/api
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui
+springdoc.swagger-ui.url=/api/v3/api-docs
+springdoc.swagger-ui.config-url=/api/v3/api-docs/swagger-config
 
 # Mostrar información de Actuator en la doc (si usas actuator)
 springdoc.show-actuator=true
